<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">ERP采购管理</string>
    <string name="user_name">用户名</string>
    <string name="user_pwd">密码</string>
    <string name="login">登 陆</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="systemSetting">设置</string>
    <string name="ghsCategory">供货商类型</string>
    <string name="please_select">请选择</string>
    <string name="searchOrder">查询订单</string>
    <string name="auditOrder">审核订单</string>
    <string name="back">返回</string>
    <string name="createTime">制单日期</string>
    <string name="checkStatus">审核状态</string>
    <string name="dateTip">请选择</string>
    <string name="unCheck">弃审</string>
    <string name="category">采购类别</string>
    <string name="xqDate">需求日期</string>
    <string name="dhDate">到货日期</string>
    <string name="multiSelect">多选</string>
    <string name="ghs">供货商</string>
    <string name="orderList">订单列表</string>
    <string name="newOrderTitle">添加新订单</string>
    <string name="jsfs">结算方式</string>
    <string name="cgqy">采购区域</string>
    <string name="clickForAdd">点击添加</string>
    <string name="bumen">采购部门</string>
    <string name="sub_bumen">下属部门</string>
    <string name="ywy">业务员</string>
    <string name="fktj">付款条件</string>
    <string name="ysfs">运输方式</string>
    <string name="ddlx">订单类型</string>
    <string name="dj">订金</string>
    <string name="yf">运费</string>
    <string name="hl">汇率</string>
    <string name="dz">到货地址</string>
    <string name="bz">备注</string>
    <string name="hbdw">单位：元</string>
    <string name="wl">物料</string>
    <string name="wlList">物料清单</string>
    <string name="addedWl">订单物料</string>
    <string name="orderOperate">订单操作</string>
    <string name="delete">删除</string>
    <string name="check">审核</string>
    <string name="edit">编辑</string>
    <string name="refresh">刷新</string>
    <string name="exit">退出</string>
    <string name="filter">筛选</string>
    <string name="submitOrder">提交订单</string>
    <string name="wlCategory">类别</string>
    <string name="wlCategorySub">子类</string>
    <string name="cp">产品</string>
    <string name="wlNo">编码</string>
    <string name="wlName">名称</string>
    <string name="wlPrice">单价</string>
    <string name="wlLevel">等級</string>
    <string name="amount">总计</string>
    <string name="wlCount">数量</string>
    <string name="orderWlDetailEdit">物料信息编辑</string>
    <string name="orderCreateDate">制单日期</string>
    <string name="orderCreateStartDate">起始日期</string>
    <string name="orderCreateEndDate">终止日期</string>
    <string name="managerPhone">审核员手机号</string>
    <string name="ywyPhone">业务员手机号</string>
</resources>